--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    box-shadow: 0 25px 15px hsl(211, 26%, 84%);
 }
 
 .container img {
